<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/card_border_background">

    <ImageView
            android:layout_width="100dp"
            android:layout_height="90dp"
            tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/collectionImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/mock_image"/>
    <TextView
            android:text="@string/collection_title"
            android:layout_width="142dp"
            android:layout_height="49dp"
            android:id="@+id/collectionName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/collectionImage"
    />
    <TextView
            android:text="@string/productname"
            android:layout_width="141dp"
            android:layout_height="35dp"
            android:id="@+id/productName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/collectionImage" android:layout_marginTop="56dp"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:id="@+id/productName2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/productName"
            android:text="@string/available"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:id="@+id/numberOfInventoryItems"
            android:text="@string/number_of_items"
            app:layout_constraintTop_toBottomOf="@+id/productName2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="36dp" android:layout_marginTop="8dp"/>
</android.support.constraint.ConstraintLayout>