<?xml version="1.0" encoding="utf-8"?>
<!--Android is really unstable.
Initially Constraint layout was used because of it's flexibility.
This caused the the last item in the adapter to not render properly -->
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_constraint"
        tools:context=".CollectionDetailsPage" android:orientation="vertical">
    <android.support.constraint.ConstraintLayout
            android:id="@+id/top_card"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_border_background"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >

        <ImageView
                android:id="@+id/collection_image_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:srcCompat="@tools:sample/avatars"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/mock_image"/>

        <TextView
                android:id="@+id/collection_title_card"
                android:text="@string/collection_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                app:layout_constraintStart_toEndOf="@+id/collection_image_card"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp"
                android:textStyle="bold" android:textSize="18sp" android:textColor="@android:color/black"
                />

        <TextView
                android:id="@+id/collection_html_card"
                android:text="@string/sample_body_html"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/collection_image_card"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/collection_title_card"
                />

    </android.support.constraint.ConstraintLayout>

    <TextView
            android:text="@string/Loading_Message"
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:id="@+id/loading_title"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/top_card"
            />

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/nestedScrollView"
            android:scrollbars="vertical"
           >
        <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/recyclerView_Collections_Data"
               />
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>